--- a/hello.html
+++ b/hello.html
@@ -1,9 +1,59 @@
 <html>
 
-<body>
-    <h1>Hello Extensions</h1>
+<head>
 
-    <button id="btn" onclick="myFunction()">bam</button>
+    <style>
+        html {
+            height: fit-content;
+            border-radius: 10px;
+            box-sizing: border-box;
+            padding: 10px;
+        }
+
+        body {
+            height: 170px;
+            background-color: antiquewhite;
+            border-radius: 10px;
+        }
+
+        .form-group {
+            display: flex;
+            gap: 10px;
+        }
+
+        h3 {
+            margin: 0;
+            font-size: 16px;
+            margin-top: 10px;
+        }
+
+        .input {
+            height: 25x;
+        }
+    </style>
+</head>
+
+<body>
+    <h3>Them tu die</h3>
+    <div class="form-group">
+        <input id="ipBatDau_die" type="text" class="input" placeholder="Tu bat dau">
+        <input id="ipKetThuc_die" type="text" class="input" placeholder="Tu ket thuc">
+    </div>
+
+    <h3>Them tra loi</h3>
+    <div class="form-group">
+        <input id="ipBatDau_tl" type="text" class="input" placeholder="Tu bat dau">
+        <input id="ipKetThuc_tl" type="text" class="input" placeholder="Tu ket thuc">
+    </div>
+
+    <h3>Xoa tu</h3>
+    <div class="form-group">
+        <input id="ipBatDau_xoa" type="text" class="input" placeholder="Tu bat dau">
+        <input id="ipKetThuc_xoa" type="text" class="input" placeholder="Tu ket thuc">
+    </div>
+
+
+
 
     <script src="popup.js"></script>
 </body>
