--- a/hello.html
+++ b/hello.html
@@ -46,7 +46,7 @@
         <input id="ipKetThuc_tl" type="text" class="input" placeholder="Tu ket thuc">
     </div>
 
-    <h3>Xoa tu</h3>
+    <h3 id="xoa-tu">Xoa tu</h3>
     <div class="form-group">
         <input id="ipBatDau_xoa" type="text" class="input" placeholder="Tu bat dau">
         <input id="ipKetThuc_xoa" type="text" class="input" placeholder="Tu ket thuc">
