--- a/hello.html
+++ b/hello.html
@@ -1,4 +1,4 @@
-<html>
+<html lang="vi">
 
 <head>
 
@@ -34,25 +34,15 @@
 </head>
 
 <body>
-    <h3>Them tu die</h3>
+    <h3>Search</h3>
     <div class="form-group">
-        <input id="ipBatDau_die" type="text" class="input" placeholder="Tu bat dau">
-        <input id="ipKetThuc_die" type="text" class="input" placeholder="Tu ket thuc">
+        <input id="tuBatDau" type="text" class="input" placeholder="Keyword...">
+        <button id="btnTim">Search</button>
     </div>
-
-    <h3>Them tra loi</h3>
+    <h3>Result</h3>
     <div class="form-group">
-        <input id="ipBatDau_tl" type="text" class="input" placeholder="Tu bat dau">
-        <input id="ipKetThuc_tl" type="text" class="input" placeholder="Tu ket thuc">
+        <textarea id="ketQua" cols="30" rows="6"></textarea>
     </div>
-
-    <h3 id="xoa-tu">Xoa tu</h3>
-    <div class="form-group">
-        <input id="ipBatDau_xoa" type="text" class="input" placeholder="Tu bat dau">
-        <input id="ipKetThuc_xoa" type="text" class="input" placeholder="Tu ket thuc">
-    </div>
-
-
 
 
     <script src="popup.js"></script>
